task5/Nginx-Service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: nginx-network
  name: front-end
spec:
  selector:
    app: front-end
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: nginx-network
  name: back-end-api
spec:
  selector:
    app: back-end-api
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: nginx-network
  name: admin-front-end
spec:
  selector:
    app: admin-front-end
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: nginx-network
  name: admin-back-end-api
spec:
  selector:
    app: admin-back-end-api
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
